# jupyter-paint-segment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: dev.ipynb  main.ipynb
js/: canvas_paint.js  index.html  paint_widget.js  styles.css
scripts/: ipynb-cleaner.sh
src/jupyter_paint_segment/: __init__.py  config.py  postprocess.py  segment_widget.py  widget.py
src/jupyter_paint_segment/static/: paint_widget.js
