[tool.poetry]
name = "jupyter-paint-label"
version = "0.0.1"
description = "Jupyter widget for manual image segmantation"
authors = ["adusachev <adusachev@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26.0"
matplotlib = "3.8.2"
ipykernel = "6.29.0"
ipython = "8.24.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.5"
opencv-python = "4.9.0.80"
pillow = "10.3.0"
anywidget = "^0.9.14"
notebook = "7.3.2"


[tool.poetry.group.dev.dependencies]
nbstripout = "0.8.0"
pre-commit = "4.0.1"
isort = "^5.13.2"
black = {extras = ["jupyter"], version = "^24.10.0"}
pytest = "^8.3.4"
mypy = "^1.14.1"
plotly = "5.20.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
py_version=311
